install/0000_90_machine-api-operator_05_networkpolicy-allow-ingress-metal.yaml
# Add ports for metal
# As metal behavior can be quite different from other deployment because of the added services and network complexity
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-metal
  namespace: openshift-machine-api
  annotations:
    capability.openshift.io/name: MachineAPI
    exclude.release.openshift.io/internal-openshift-hosted: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
spec:
  ingress:
  - ports:
    - protocol: TCP
      port: 80 # httpd service
    - protocol: TCP
      port: 443 # secure httpd service      
    - protocol: TCP
      port: 6180 # ironic httpd port
    - protocol: TCP
      port: 6183 # secure ironic httpd port
    - protocol: TCP
      port: 6385 # ironic API
    - protocol: TCP
      port: 6388 # ironic API proxy
    - protocol: TCP
      port: 8084 # image customization service
    - protocol: TCP
      port: 9608 # prometheus exporter for ironic
    - protocol: TCP
      port: 6190 # ironic networking JSON-RPC
    - protocol: TCP
      port: 9447 # bare metal webhook service
  podSelector: {}
  policyTypes:
  - Ingress
